# senior_project

./: .gitignore  README.md  package.json  presentation.pptx  research_paper.docx  ui.design.xd
event_emitter/: Cargo.toml
event_emitter/src/: lib.rs
event_emitter/tests/: tests.rs
locales/: en.yaml
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: example.rs  main.rs  window.rs
src-tauri/src/compression/: algorithm.rs  compress.rs  decompress.rs  mod.rs
src-tauri/src/errnos/: errnos.rs  mod.rs
src-tauri/src/errnos/prop/: mod.rs  params.rs  prop.rs
src-tauri/src/fs/: count.rs  decision.rs  mod.rs  size.rs  status.rs  traversal.rs
src-tauri/src/fs/walkdir/: entry_decision.rs  later.rs  mod.rs
src-tauri/src/locale/: locale.rs  mod.rs
src-tauri/src/notifications/: manager.rs  mod.rs  notification.rs
src-tauri/src/path/: copy.rs  ext.rs  mod.rs
src-tauri/src/shared/: buf_writer.rs  marco_polo.rs  mod.rs  performance.rs
src-tauri/src/shared/progress/: mod.rs  progress.rs  reader.rs  updater.rs  writer.rs
src-tauri/src/transfer/: chunk.rs  dst_path.rs  failed_part.rs  ffi.rs  file_assembler.rs  file_copier.rs  file_info.rs  file_splitter.rs  header.rs  mod.rs  part.rs  part_manager.rs  parting_info.rs  settings.rs  status.rs  tracker.rs  transfer_manager.rs  worker.rs
src-tauri/src/ui/: mod.rs
src-tauri/src/utils/: array.rs  behold.rs  error.rs  event_emitter.rs  log.rs  macros.rs  mod.rs  strings.rs
src-tauri/tests/: mod.rs
src/lib/: Nav.svelte  copy.svelte
testing/dir2/dir /: item.txt
testing/dir3/: item3
testing/dir5/: item5.txt
