[package]
name = "event_emitter"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[[tests]]
name = "test"
path = "tests/test.rs"

[dependencies]
quote = "1.0.26"
syn = {version = "2.0.15", features = ["extra-traits"]}

[dev-dependencies]
smallvec = "1.10.0"
