[package]
name = "senior-project"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27.0", features = ["fs", "io-std", "io-util", "macros", "rt" , "time"] }
futures = "0.3.28"
async-recursion = "1.0.4"
log = "0.4.17"
log4rs = "1.2.0"
rand = "0.8.5"
normpath = "1.1.1"
async-fs = "1.6.0"
jwalk = "0.8.1"
async-trait = "0.1.68"
hashbrown = "0.13.2"
walkdir = "2.3.3"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
bytes = "1.4.0"
bincode = "1.3.3"
async-channel = "1.8.0"
smallvec = "1.10.0"
syn = "2.0.15"
event_emitter = {path = "../event_emitter"}
pin-project-lite = "0.2.9"
pin-project = "1.0.12"
mime_guess = "2.0.4"
mime = "0.3.17"
async-compression = {version = "0.3.15", features=["tokio", "bzip2","zstd", "brotli", "xz",]}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
